@@ -2,7 +2,6 @@ package org.peidevs.waro.table;
 
 import java.util.*;
 import java.util.stream.*;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.joining;
 
 public class Hand {
@@ -28,7 +27,7 @@ public class Hand {
         Hand newHand = null;
 
         if (cards.contains(card)) {
-            var newCards = cardsAsIntStream().filter(c -> c != card).boxed().collect(toList());
+            var newCards = cardsAsIntStream().filter(c -> c != card).boxed().toList();
             newHand = new Hand(newCards);
         } else {
             throw new IllegalArgumentException("illegal card : " + card);
