@@ -8,7 +8,6 @@ import static org.junit.Assert.*;
 import org.junit.*;
 
 import java.util.stream.*;
-import static java.util.stream.Collectors.toList;
 
 public class PlayerTest {
 
@@ -17,7 +16,7 @@ public class PlayerTest {
         var strategy = new MaxCard();
         int maxCard = 40;
         int prizeCard = 10;
-        var cards = IntStream.range(1,5).boxed().collect(toList());
+        var cards = IntStream.range(1,5).boxed().toList();
         var hand = new Hand(cards);
         var player = new Player("Randy", strategy, maxCard, hand);
         var strategyExecutor = player.getStrategy(prizeCard);
@@ -26,7 +25,7 @@ public class PlayerTest {
         assertEquals(3, player.getNumCardsInHand());
         assertEquals(1, player.getPlayerStats().numRoundsWon());
 
-        var newCards = IntStream.range(6,8+1).boxed().collect(toList());
+        var newCards = IntStream.range(6,8+1).boxed().toList();
         var newHand = new Hand(newCards);
 
         // test
@@ -35,23 +34,4 @@ public class PlayerTest {
         assertEquals(3, result.getNumCardsInHand());
         assertEquals(0, result.getPlayerStats().numRoundsWon());
     }
-
-    /*
-    @Test
-    public void testGetStrategy_Basic() {
-        var strategy = new MaxCard();
-        int maxCard = 40;
-        int prizeCard = 10;
-        var cards = IntStream.range(1,5).boxed().collect(toList());
-        var hand = new Hand(cards);
-        var player = new Player("Randy", strategy, maxCard, hand);
-
-        // test
-        var strategy = player.getStrategy(prizeCard);
-
-        assertEquals(player, bid.bidder());
-        assertEquals(4, bid.offer());
-        assertEquals(prizeCard, bid.prizeCard());
-   }
-   */
 }
